# bilara

./: .dockerignore  .editorconfig  .gitignore  .python-version  Makefile  README.md  _README.md  docker-compose.yml  index-tm  index.html  manifest.json  package-lock.json  package.json  pyproject.toml  run-dev  run-dev-fast  run-dev.sh  run-prod.sh  run_dev.sh
client/: es-dev-server.config.js  index.html  manifest.json  package-lock.json  package.json  polymer.json  push-manifest.json  rollup.config.js  server.js  sw-precache-config.js  web-dev-server.config.js
client/server/: package-lock.json
client/src/: dot-prop.js  form.js  store.js  util.js
client/src/actions/: app.js  browse.js  dialog.js  queue.js  search.js  segment-data.js  segment.js
client/src/components/: bilara-app.js  bilara-cell.js  bilara-columns-dialog.js  bilara-dialog-publish.js  bilara-dialog.js  bilara-matches.js  bilara-modal.js  bilara-search-result.js  bilara-search.js  bilara-search.js.orig  bilara-segment.js  bilara-spinning-hourglass.js  bilara-suggester.js  bilara-suggestions.js  bilara-updatable.js  browse-view.js  button-shared-styles.js  login-view.js  my-icons.js  my-view404.js  page-view-element.js  redux-view.js  shared-styles.js  translation-view.js
client/src/reducers/: app.js  browse.js  dialog.js  search.js  segment-data.js
client/src/styles/: columns.js  themes.js
server/: .env.example  .gitignore  Dockerfile  Pipfile  app.py  arango.py  arango_common.py  auth.py  bilara_types.py  config.py  docker-entrypoint.sh  fs.py  gevent-wsgi.py  git_branch.py  git_fs.py  git_pr.py  import_export.py  local_config.py.example  log.py  notify.py  permissions.py  pre_commit.py  projects.py  pyproject.toml  repo.py  requirements.txt  segment_updates.py  simple_git_fs.py  task_runner.py  tasks.py  tests.py  tm.py  util.py
server/migrations/: 1-initialize.py  2-add-splitter.py  3-add-simple-normalizer.py  4-add-paths.py  5-add-historic.py  6-add-legacy-functions.py  6-add-suggestions.py  7-add-tasks.py  README.md
server/search/: __init__.py  arango_search.py  elastic_search.py  highlight.py  new_search.py  site_update.py
server/suggestions/: suggestions.py
server/tests/: test_permissions.py
src/: store.js
src/_element/: _element.js
src/actions/: app.js  segment.js
src/bilara-app/: bilara-app.js  bilara-editor.js  bilara-segment.js  bilara-settings.js
src/components/: bilara-app.js  bilara-editor.js  bilara-segment.js
src/reducers/: segment.js
test/_element/: _element_test.html
test/bilara-app/: bilara-app_test.html
